# ApplicationClient

./: CMakeLists.txt  Config.cmake.in  Package.cmake  README.md
ApplicationClient/: CMakeLists.txt  main.cpp
ApplicationClientCore/: ApplicationClientCore.Precompiled.h  ApplicationClientCore_global.h  CMakeLists.txt
ApplicationClientCore/include/: ApplicationClient.h  ApplicationClientCore  ButtonModel.h  CMakeLists.txt  DashboardController.h  DashboardModel.h  DashboardView.h
ApplicationClientCore/rsrc/: applicationclientcore.qrc  main.qml
ApplicationClientCore/rsrc/controls/: Dashboard.qml  SideMenu.qml  sideMenu.qml
ApplicationClientCore/src/: ApplicationClient.cpp  ButtonModel.cpp  CMakeLists.txt  DashboardController.cpp  DashboardModel.cpp  DashboardView.cpp  closebutton.cpp  closebutton.h
ApplicationClientCore/ui/: CMakeLists.txt
ApplicationClientInterface/: ApplicationClientInterface_export.h  CMakeLists.txt
ApplicationClientInterface/include/: ApplicationClientInterface  ApplicationClientInterface.h  ApplicationClientPluginInterface.h  Button.h  CMakeLists.txt  DashboardItem.h  MainView.h
ApplicationClientInterface/src/: ApplicationClientInterface.cpp  ApplicationClientPluginInterface.cpp  Button.cpp  CMakeLists.txt  DashboardItem.cpp
