
if(NOT CMAKE_PROJECT_NAME)
project("ApplicationClient" LANGUAGES CXX)
set(EXEC_FOLDER "bin")

if(WIN32)
set(LIB_FOLDER "bin")
else()
set(LIB_FOLDER "lib")
endif()
set(INCLUDE_FOLDER "include")
set(PLUGIN_FOLDER "${EXEC_FOLDER}/plugins/client")
endif()
enable_testing()
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(ApplicationClientCore)
add_subdirectory(ApplicationClientInterface)
add_subdirectory(ApplicationClient)

if(${PACKAGE})
include("Package.cmake")
endif()
